# Titanic-Analysis

./: .gitignore  Dockerfile  Makefile  README.md  app.py  client.py  model_weights.npy  model_weights_meta.json  nixpacks.toml  pyproject.toml  utils.py
docker/: Dockerfile  docker-compose.yaml
src/: KMeans-Clustering.ipynb  KNN.ipynb  LinearRegression.ipynb  Makemore.ipynb  Mnist.ipynb  NeuralNetworks.ipynb  test.ipynb
