[project]
name = "titanic-analysis"
version = "0.1.0"
description = "An app that predict the chance of survival of entering titanic"
authors = [
    {name = "Ahmed Gouda",email = "ahmedmosad405@gmail.com"},
    {name = "Mohamed Shalaby"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
