[tool.poetry]
name = "titanic-analysis"
version = "0.1.0"
description = "An app that predict the chance of survival of entering titanic"
authors = [
    "Ahmed Gouda <ahmedmosad405@gmail.com>",
    "Mohamed Shalaby"
]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
scikit-learn = ">=1.6.1,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
numpy = ">=2.2.5,<3.0.0"
matplotlib = ">=3.10.3,<4.0.0"
fastapi = {extras = ["standard"], version = ">=0.115.12,<0.116.0"}
uvicorn = ">=0.34.2,<0.35.0"

[tool.railway]
builder = "nixpacks"
buildCommand = "poetry install --no-dev"
startCommand = "uvicorn app:app --host 0.0.0.0 --port $PORT"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

